--- a/Clase 03/Alumno/Desafío/index.html
+++ b/Clase 03/Alumno/Desafío/index.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ejercicio 3</title>
+    <title>Desafio 03</title>
 </head>
 <body>
-    
-
-
-
-
-
     <script src="index.js"></script>
 </body>
 </html>
