--- a/Clase 10 - 11/Alumno/Workshop/index.html
+++ b/Clase 10 - 11/Alumno/Workshop/index.html
@@ -1,82 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="tab icon" href="./favicon.png">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
-    <title>Clase 10 / 11 - Workshop</title>
-</head>
-<body>
-    <h2 style="text-align: center; margin-top: 30px">Workshop</h2>
-    <div style="margin: auto; width: 90%">
-        <div class="row">
-            <div class="col-md-6">
-                <h3 class="text-center">Lista de alumnos</h3>
-                <ul id="mainList" class="list-group"></ul>
-            </div>
-            <div class="col-md-6">
-                <h3 class="text-center">Ingreso de datos</h3>
-                <form>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="firstName" placeholder="Nombre">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="lastName" placeholder="Apellido">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="dni" placeholder="DNI">
-                        </div>
-                        <div class="form-group col-md-6"> 
-                            <input type="text" class="form-control" id="email" placeholder="E-mail">
-                        </div>
-                        <div class="form-group col-md-12" style="display: flex; flex-direction: column-reverse"> 
-                            <button type="button" class="btn btn-primary" id="addStudentButton">Agregar alumno</button>
-                        </div>
-                    </div>
-                </form>
-                <form>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="deleteDni" placeholder="DNI">
-                        </div>
-                        <div class="form-group col-md-6" style="display: flex; flex-direction: column-reverse"> 
-                            <button type="button" class="btn btn-danger" id="deleteStudentButton">Eliminar alumno</button>
-                        </div>
-                    </div>
-                </form>
-                <form>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="searchText" placeholder="Nombre">
-                        </div>
-                        <div class="form-group col-md-6" style="display: flex; flex-direction: column-reverse"> 
-                            <button type="button" class="btn btn-success" id="searchStudentButton">Buscar alumno</button>
-                        </div>
-                    </div>
-                </form>
-                <div class="row">
-                    <div class="col-md-12">
-                        <ul id="searchList" class="list-group"></ul>
-                    </div>
-                </div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Clase 01 - Coderhouse</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles/main.css" />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Workshop</h1>
+          <p class="lead">Administración de Alumnos</p>
         </div>
+      </div>
     </div>
-
-
-
-
-
-
-
-    <script src="./js/index.js"></script>
-</body>
-
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>DNI</th>
+                <th>E-mail</th>
+              </tr>
+            </thead>
+            <tbody id="bodyTable"></tbody>
+          </table>
+        </div>
+        <div class="col col-auto">
+          <form class="frm-alumnos" action="#">
+            <div class="form-row">
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Nombre"
+                  id="nombreInput"
+                />
+              </div>
+              <div class="col">
+                <input
+                id="apellidoInput"
+                  type="text"
+                  class="form-control"
+                  placeholder="Apellido"
+                />
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="DNI"
+                  id="dniInput"
+                />
+              </div>
+              <div class="col">
+                <input type="text" id="emailInput" class="form-control" placeholder="E-mail" />
+              </div>
+            </div>
+            <div class="form-row">
+              <button id="btn-add" class="btn btn-outline-primary btn-block">
+                Agregar Alumno
+              </button>
+            </div>
+            <div class="form-row">
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="DNI"
+                  id="dniInputEliminar"
+                />
+              </div>
+              <div class="col">
+                <button
+                  id="btn-delete"
+                  class="btn btn-outline-danger btn-block"
+                >
+                  Eliminar Alumno
+                </button>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col">
+                <input type="text" id="txtnombreABuscar" class="form-control" placeholder="Nombre" />
+              </div>
+              <div class="col">
+                <button
+                  id="btn-search"
+                  class="btn btn-outline-success btn-block"
+                >
+                  Buscar Alumno
+                </button>
+              </div>
+            </div>
+            <div class="form-row">
+                <h1 id="imprimirNombreBusqueda"></h1>
+                <h2 id="imprimirApellidoBusqueda"></h2>
+                <h3 id="imprimirDniBusqueda"></h3>
+                <h4 id="imprimirMailBusqueda"></h4>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- Inclusión de JavaScript desde un archivo externo -->
+    <script src="js/index.js"></script>
+  </body>
 </html>
